--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -37,13 +37,13 @@ jobs:
 
       # 3. 安装依赖
       - name: Install dependencies
-        run: npm install --legacy-peer-deps # 或者 'pnpm install' / 'yarn install --frozen-lockfile'
+        run: pnpm install --legacy-peer-deps # 或者 'pnpm install' / 'yarn install --frozen-lockfile'
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }} # 确保在安装私有 peerDeps 时有认证
 
       # 4. 构建组件库
       - name: Build package
-        run: npm run build # 执行你在 package.json 中定义的构建脚本
+        run: pnpm run build # 执行你在 package.json 中定义的构建脚本
 
       # 5. 发布到 npm
       - name: Publish to npm
