--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -37,7 +37,7 @@ jobs:
 
       # 3. 安装依赖
       - name: Install dependencies
-        run: pnpm install --legacy-peer-deps # 或者 'pnpm install' / 'yarn install --frozen-lockfile'
+        run: npm -g install pnpm &&  pnpm install --legacy-peer-deps # 或者 'pnpm install' / 'yarn install --frozen-lockfile'
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }} # 确保在安装私有 peerDeps 时有认证
 
