--- a/apps/demo/tsconfig.json
+++ b/apps/demo/tsconfig.json
@@ -1,3 +1,4 @@
+// apps/demo/tsconfig.json
 {
   "compilerOptions": {
     "target": "ES2020",
@@ -5,7 +6,6 @@
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
     "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true,
 
     /* Bundler mode */
     "moduleResolution": "bundler",
@@ -19,7 +19,8 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+    "forceConsistentCasingInFileNames": true // ⚡️ 推荐
   },
   "include": ["src"]
 }
