feat: pnpm monorepo

--- a/.github/workflows/deploy-preview.yml
+++ b/.github/workflows/deploy-preview.yml
@@ -1,51 +1,51 @@
-name: Deploy Demo to GitHub Pages # Name of your workflow
+# .github/workflows/deploy-demo.yml
+name: Deploy Demo to GitHub Pages # 工作流名称
 
 on:
   push:
     branches:
-      - main # Trigger on pushes to the 'main' branch
-
-  workflow_dispatch: # Allow manual triggering from the GitHub Actions tab
+      - main # 当推送到 'main' 分支时触发
+  workflow_dispatch: # 允许手动从 GitHub Actions 页面触发
 
 jobs:
   deploy_demo:
-    runs-on: ubuntu-latest # Run on a fresh Ubuntu environment
+    runs-on: ubuntu-latest # 在最新的 Ubuntu 运行器上执行任务
 
-    # Permissions needed for deploying to GitHub Pages
+    # 部署到 GitHub Pages 所需的权限
     permissions:
-      contents: write # To push the 'gh-pages' branch
-      pages: write # To deploy to GitHub Pages
-      id-token: write # Needed for OIDC authentication with GitHub Pages (modern way)
+      contents: write # 允许 Actions 写入仓库内容 (用于推送 gh-pages 分支)
+      pages: write # 允许部署到 GitHub Pages
+      id-token: write # 启用 OIDC 认证 (现代 GitHub Pages 部署推荐)
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@v4 # 检出仓库代码
 
       - name: Set up Node.js
-        uses: actions/setup-node@v4
+        uses: actions/setup-node@v4 # 设置 Node.js 环境
         with:
-          node-version: "20.x" # Or your preferred Node.js version
-          cache: "npm"
-          cache-dependency-path: "**/package-lock.json" # Cache dependencies for faster builds
+          node-version: "20.x" # 使用 Node.js 20 LTS 版本
+          cache: "pnpm" # ⚡️ 关键: 使用 pnpm 作为包管理器缓存
+          cache-dependency-path: "**/pnpm-lock.yaml" # ⚡️ 关键: pnpm 的锁文件路径
 
-      # --- Crucial: Build your component library first ---
-      - name: Install root dependencies and build library
-        run: |
-          npm install # Install dependencies for the root project
-          npm run build # Run your component library's build script (should create 'dist' folder)
+      - name: Install pnpm
+        run: npm install -g pnpm@latest # ⚡️ 关键: 在运行器中全局安装 pnpm
 
-      # --- Navigate into example/ directory and build the demo app ---
-      - name: Install example dependencies and build demo
-        run: |
-          cd example # Change directory to your example app
-          npm install # Install example app's dependencies (will pick up 'file:../' reference)
-          npm run build # Build the example app (output will be in ../docs as per vite.config.ts)
+      - name: Install monorepo dependencies
+        # ⚡️ 关键: 在 monorepo 根目录安装所有包的依赖
+        # --frozen-lockfile 确保使用 pnpm-lock.yaml 中的精确版本
+        run: pnpm install --frozen-lockfile
 
-      # --- Deploy the built demo to GitHub Pages ---
+      - name: Build component library and demo application
+        # ⚡️ 关键: 运行 monorepo 根 package.json 中定义的 'build' 脚本
+        # 这个脚本应该负责先构建 lib (pnpm --filter responsive-textarea build)
+        # 再构建 demo (pnpm --filter responsive-textarea-demo build)
+        run: pnpm run build:demo
+
       - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3 # A popular action for deploying to gh-pages
+        uses: peaceiris/actions-gh-pages@v3 # 部署到 gh-pages 的常用 Action
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }} # GitHub's built-in token
-          publish_dir: ./docs # The directory to publish from (relative to the repo root)
-          publish_branch: gh-pages # The branch to publish to
-          force_orphan: true # Recommended for clean gh-pages deployment
+          github_token: ${{ secrets.GITHUB_TOKEN }} # GitHub 提供的内置 Token
+          publish_dir: ./docs # ⚡️ 关键: Demo 应用的构建输出目录 (位于 monorepo 根目录)
+          publish_branch: gh-pages # 发布到的分支
+          force_orphan: true # 推荐: 确保每次部署都完全覆盖 gh-pages 分支，保持其整洁
