--- a/.github/workflows/deploy-preview.yml
+++ b/.github/workflows/deploy-preview.yml
@@ -25,8 +25,7 @@ jobs:
         uses: actions/setup-node@v4 # 设置 Node.js 环境
         with:
           node-version: "20.x" # 使用 Node.js 20 LTS 版本
-          cache: "pnpm" # ⚡️ 关键: 使用 pnpm 作为包管理器缓存
-          cache-dependency-path: "**/pnpm-lock.yaml" # ⚡️ 关键: pnpm 的锁文件路径
+          registry-url: "https://registry.npmjs.org/" # Points to the npmjs registry
 
       - name: Install pnpm
         run: |
